--- a/HorseRacePrediction.ipynb
+++ b/HorseRacePrediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1dSiYE4T-qVptggCK6Bw-MmEPCXtvVMCC",
-      "authorship_tag": "ABX9TyNmkq8z8G7mAO9vvGsOKtxd",
+      "authorship_tag": "ABX9TyPvMHIgiITi6aK5BqpBDXHH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,52 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Libraries**"
+      ],
+      "metadata": {
+        "id": "SxrurFCMTR3a"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
         "import glob\n",
-        "import os\n",
-        "\n",
-        "directory = '/content/drive/MyDrive/DTM15/Dataset/Horse Race Prediction/Horse'\n",
+        "import os"
+      ],
+      "metadata": {
+        "id": "JER2EV6yTOu5"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# For displaying all of the columns in dataframes\n",
+        "pd.set_option('display.max_columns', None)"
+      ],
+      "metadata": {
+        "id": "Pc4lN88HYJeg"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Data collection**"
+      ],
+      "metadata": {
+        "id": "TW8ybB3hTZkH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "directory = '/content/drive/MyDrive/DTM15/Dataset/HorseRacePrediction/Horse'\n",
         "\n",
         "# List all CSV files in the directory\n",
         "all_files = glob.glob(os.path.join(directory, '*.csv'))\n",
@@ -46,7 +85,7 @@
         "# Process each file\n",
         "for file in all_files:\n",
         "    # Extract the base filename (without directory)\n",
-        "    base = os.path.basename(file)\n",
+        "    base = os.path.basename(file).lower()\n",
         "\n",
         "    # Split filename to check format (horses_YYYY.csv or races_YYYY.csv)\n",
         "    if base.startswith('horses_') or base.startswith('races_'):\n",
@@ -68,14 +107,7 @@
         "\n",
         "# Concatenate all dataframes in each list into a single dataframe\n",
         "horses_df = pd.concat(horses_dfs, ignore_index=True)\n",
-        "races_df = pd.concat(races_dfs, ignore_index=True)\n",
-        "\n",
-        "# Print the head of each dataframe to check the results\n",
-        "print(\"Horses DataFrame:\")\n",
-        "print(horses_df.head())\n",
-        "\n",
-        "print(\"\\nRaces DataFrame:\")\n",
-        "print(races_df.head())\n"
+        "races_df = pd.concat(races_dfs, ignore_index=True)"
       ],
       "metadata": {
         "id": "K71ZBGHe6R3K"
@@ -93,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ywf7ERm66kpx",
-        "outputId": "506eb81f-a7b9-4670-c233-b4c6ea67fd12"
+        "outputId": "9a5e5600-c28b-40a3-a0fa-c2af0a6504f5"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,9 +184,9 @@
           "height": 313
         },
         "id": "JsJTldWJ6nxC",
-        "outputId": "16279850-a0e8-48e7-dc0d-0f48f7263786"
+        "outputId": "7ee18b09-22cc-4bb4-971e-ac6d8807eac1"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,7 +229,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-545efc39-deba-4129-b51e-fc5e26083d37\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e6e60a83-c6b3-409c-9db4-ec662ec8b61f\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -414,7 +446,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-545efc39-deba-4129-b51e-fc5e26083d37')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e6e60a83-c6b3-409c-9db4-ec662ec8b61f')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -466,12 +498,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-545efc39-deba-4129-b51e-fc5e26083d37 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e6e60a83-c6b3-409c-9db4-ec662ec8b61f button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-545efc39-deba-4129-b51e-fc5e26083d37');\n",
+              "        const element = document.querySelector('#df-e6e60a83-c6b3-409c-9db4-ec662ec8b61f');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -491,8 +523,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-36a22e70-971d-4756-adaf-25650cf1a8ed\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-36a22e70-971d-4756-adaf-25650cf1a8ed')\"\n",
+              "<div id=\"df-fc7ed140-5190-4020-be04-08ef96ce37b4\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fc7ed140-5190-4020-be04-08ef96ce37b4')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -611,7 +643,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-36a22e70-971d-4756-adaf-25650cf1a8ed button');\n",
+              "        document.querySelector('#df-fc7ed140-5190-4020-be04-08ef96ce37b4 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -627,7 +659,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -641,9 +673,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IQI6HR5S7AWi",
-        "outputId": "891a8552-1693-4e30-c6c3-4858627bc4fc"
+        "outputId": "d659d5f9-0753-42f8-eca3-52bf939a2e1a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,9 +723,9 @@
           "height": 452
         },
         "id": "AsmrLWc_7AQ5",
-        "outputId": "12364c59-af10-43b8-9924-4be870ab7a60"
+        "outputId": "dbbd233e-7e0f-41f9-a8b4-402684e12fd3"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -729,7 +761,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bfc4e70b-25d2-4601-8d67-0f47041391c2\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-cb99a654-d4b7-4ab8-bc0f-052638ac8af6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -892,7 +924,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bfc4e70b-25d2-4601-8d67-0f47041391c2')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cb99a654-d4b7-4ab8-bc0f-052638ac8af6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -944,12 +976,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bfc4e70b-25d2-4601-8d67-0f47041391c2 button.colab-df-convert');\n",
+              "        document.querySelector('#df-cb99a654-d4b7-4ab8-bc0f-052638ac8af6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bfc4e70b-25d2-4601-8d67-0f47041391c2');\n",
+              "        const element = document.querySelector('#df-cb99a654-d4b7-4ab8-bc0f-052638ac8af6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -969,8 +1001,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-894e52b5-fa7a-43c8-a009-25ba696122db\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-894e52b5-fa7a-43c8-a009-25ba696122db')\"\n",
+              "<div id=\"df-7345f7f0-0d2b-411f-ad20-b237f138a6f9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7345f7f0-0d2b-411f-ad20-b237f138a6f9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1089,7 +1121,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-894e52b5-fa7a-43c8-a009-25ba696122db button');\n",
+              "        document.querySelector('#df-7345f7f0-0d2b-411f-ad20-b237f138a6f9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
