--- a/HorseRacePrediction.ipynb
+++ b/HorseRacePrediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1dSiYE4T-qVptggCK6Bw-MmEPCXtvVMCC",
-      "authorship_tag": "ABX9TyPvMHIgiITi6aK5BqpBDXHH",
+      "authorship_tag": "ABX9TyO3qKLQnVW77YFBAg9EHLFd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1138,6 +1138,95 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Merge the two DataFrames on the 'rid' and 'Year' columns\n",
+        "merged_df = pd.merge(horses_df, races_df, on=['rid', 'Year'], how='inner')"
+      ],
+      "metadata": {
+        "id": "rucpV6J2h2Jk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Display the info of the merged DataFrame\n",
+        "merged_df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "02K47yyDhTPD",
+        "outputId": "7f9f2f6e-571b-4276-cb95-37b085135a33"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 4107315 entries, 0 to 4107314\n",
+            "Data columns (total 47 columns):\n",
+            " #   Column        Dtype  \n",
+            "---  ------        -----  \n",
+            " 0   rid           int64  \n",
+            " 1   horseName     object \n",
+            " 2   age           float64\n",
+            " 3   saddle        float64\n",
+            " 4   decimalPrice  float64\n",
+            " 5   isFav         int64  \n",
+            " 6   trainerName   object \n",
+            " 7   jockeyName    object \n",
+            " 8   position      int64  \n",
+            " 9   positionL     object \n",
+            " 10  dist          object \n",
+            " 11  weightSt      int64  \n",
+            " 12  weightLb      int64  \n",
+            " 13  overWeight    float64\n",
+            " 14  outHandicap   float64\n",
+            " 15  headGear      object \n",
+            " 16  RPR           float64\n",
+            " 17  TR            float64\n",
+            " 18  OR            float64\n",
+            " 19  father        object \n",
+            " 20  mother        object \n",
+            " 21  gfather       object \n",
+            " 22  runners       int64  \n",
+            " 23  margin        float64\n",
+            " 24  weight        int64  \n",
+            " 25  res_win       float64\n",
+            " 26  res_place     float64\n",
+            " 27  Year          object \n",
+            " 28  price         object \n",
+            " 29  course        object \n",
+            " 30  time          object \n",
+            " 31  date          object \n",
+            " 32  title         object \n",
+            " 33  rclass        object \n",
+            " 34  band          object \n",
+            " 35  ages          object \n",
+            " 36  distance      object \n",
+            " 37  condition     object \n",
+            " 38  hurdles       object \n",
+            " 39  prizes        object \n",
+            " 40  winningTime   float64\n",
+            " 41  prize         float64\n",
+            " 42  metric        float64\n",
+            " 43  countryCode   object \n",
+            " 44  ncond         object \n",
+            " 45  class         int64  \n",
+            " 46  currency      object \n",
+            "dtypes: float64(14), int64(8), object(25)\n",
+            "memory usage: 1.4+ GB\n"
+          ]
         }
       ]
     }
